updated table and email box

--- a/index.html
+++ b/index.html
@@ -66,31 +66,31 @@
                     <section class="panel-body">
                         <table class="table table-condensed table-responsive">
                             <tr >
-                                <td style="border-top: 0">POST TITLE</td>
+                                <td class="bold-me" style="border-top: 0">POST TITLE</td>
                                 <td style="border-top: 0">Customer Service Representative</td>
                             </tr>
                             <tr>
-                                <td class="col-md-4">LOCATION</td>
+                                <td class="col-md-4 bold-me">LOCATION</td>
                                 <td class="col-md-8">San Francisco C.A</td>
                             </tr>
                             <tr>
-                                <td>EMPLOYMENT TYPE</td>
+                                <td class="bold-me">EMPLOYMENT TYPE</td>
                                 <td>Full-time</td>
                             </tr>
                             <tr>
-                                <td>EXPERIENCE</td>
+                                <td class="bold-me">EXPERIENCE</td>
                                 <td>Mid-level</td>
                             </tr>
                             <tr>
-                                <td>STATUS</td>
+                                <td class="bold-me">STATUS</td>
                                 <td> Open </td>
                             </tr>
                             <tr>
-                                <td>DESCRIPTION</td>
+                                <td class="bold-me">DESCRIPTION</td>
                                 <td> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est ipsam officiis voluptatibus esse placeat illum quaerat in, doloremque quas dolorem eum expedita a, recusandae. Sunt culpa, in iusto, ut tempore repellendus accusantium beatae quibusdam tempora harum ullam error fuga cupiditate, doloremque animi quasi deserunt. Quod quae deserunt, non et iusto. </td>
                             </tr>
                             <tr>
-                                <td>HIRING LEAD</td>
+                                <td class="bold-me">HIRING LEAD</td>
                                 <td><img src="img/avatar-male.png" alt="" class="img-circle img-respoonsive"> Tony Tizzy</td>
                             </tr>
                               <tr>
@@ -148,7 +148,7 @@
 
                 <section>
                     <h4> <span class="fa fa-credit-card"></span> Use the Widget Button</h4>
-                    <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem maiores unde ipsum sit officia, laboriosam pariatur quam sed culpa inventore. </p>
+                    <p> This widget embeds the buttons for sharing jobs for submitting the resumes</p>
                     <form class="form">
                         <section class="input-group">
                             <input type="text" value="http://www.facebook.com" class="form-control">
@@ -161,9 +161,9 @@
 
                 <section>
                     <h4> <span class="fa fa-paper-plane"></span> Upload Resume by email</h4>
-                    <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem maiores unde ipsum sit officia, laboriosam pariatur quam sed culpa inventore. </p>
+                    <p>You can upload multiple resumes to this email </p>
                     <form class="form">
-                        <input type="email" class="form-control" >
+                        <input type="email" class="form-control" placeholder="example@example.com" >
                     </form>
                 </section>
             </section>
